--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="ja">
   <head>
+    <title>Abdul Razak -  Portfolio</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Abdul Razak -  Portfolio</title>
+    <link rel="shortcut icon" type="x-icon" href="img/nasir's.JPG">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/5.4.5/css/swiper.css" integrity="sha512-uMIpMpgk4n6esmgdfJtATLLezuZNRb96YEgJXVeo4diHFOF/gqlgu4Y5fg+56qVYZfZYdiqnAQZlnu4j9501ZQ==" crossorigin="anonymous" />
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
@@ -43,7 +44,7 @@
           <div class="btn">contact us here</div>
         </a>
         <div class="top-text">
-          <p>あなただけのWebサイトを</p>
+          <p>Your own website</p>
         </div>
       </div>
     </section>
@@ -154,7 +155,7 @@
             data-wow-offset="100"
             class="wow fadeIn banner-title banner-title-work"
           >
-            WORK<span>これまでの制作物</span>
+            WORK<span>Past Production</span>
           </h2>
         </div>
       </div>
@@ -167,10 +168,10 @@
                 </a>
                 <p class="img pc-only"><img src="./img/mv/photo.png" alt="" /></p>
                 <div class="work-content-text">
-                  <p class="work-name">実践コーディング</p>
-                  <p class="work-dis">Webサイト制作</p>
+                  <p class="work-name">Practical Coding</p>
+                  <p class="work-dis">Website Creation</p>
                   <p class="work-detail">
-                    実際にレスポンシブサイトをコーディングしました。
+                    I actually coded a responsive site
                   </p>
                   <p class="detail pc-only"><a href="">詳しく見る</a></p>
                 </div>
