--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
       <div class="inner  effect-fade">
         <div class="about-text wow fadeIn" data-wow-offset="350">
           <div class="about-top">
-            <p class="about_img"><img src="./img/mv/IMG_1409.jpg" alt=""/></p>
+            <p class="about_img"><img src="./img/nasir's.JPG" alt=""/></p>
             <h3 class="name">
               <span class="name-l">小池　陽翔</span
               ><span class="name-s">Koike Hikaru</span>
